force-app/main/default/objects/User/fields/Dev_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Dev_Team_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dev Team Member</label>
    <type>Checkbox</type>
</CustomField>