force-app/main/default/objects/User/fields/Employee_Offboarding__c.field-meta.xml
<CustomField>
    <fullName>Employee_Offboarding__c</fullName>
    <label>Employee Offboarding</label>
    <type>Url</type>
</CustomField>