force-app/main/default/objects/User/fields/Employee_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Employee_Onboarding__c</fullName>
    <description>This field holds the url of the employee onboarding sheet</description>
    <label>Employee Onboarding</label>
    <type>Url</type>
</CustomField>