force-app/main/default/objects/User/fields/HIPPA_Certified_User__c.field-meta.xml
<CustomField>
    <fullName>HIPPA_Certified_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This user has completed HIPPA training and certification for the period noted in their attached Certification.</inlineHelpText>
    <label>HIPPA Certified User</label>
    <type>Checkbox</type>
</CustomField>