force-app/main/default/objects/User/fields/Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate__c</fullName>
    <description>Hourly rate of an individual</description>
    <label>Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>