force-app/main/default/objects/User/fields/Jpeto__Bereavement_Leave__c.field-meta.xml
<CustomField>
    <fullName>Jpeto__Bereavement_Leave__c</fullName>
    <description>The number of Bereavement Leave Hours available.</description>
    <label>Bereavement Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>