force-app/main/default/objects/User/fields/Jpeto__Billable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Jpeto__Billable_Rate__c</fullName>
    <label>Billable Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>