force-app/main/default/objects/User/fields/Jpeto__Connect_Account__c.field-meta.xml
<CustomField>
    <fullName>Jpeto__Connect_Account__c</fullName>
    <label>Connect Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>