force-app/main/default/objects/User/fields/Jpeto__Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Jpeto__Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Contract Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>