force-app/main/default/objects/User/fields/Jpeto__Global_Tagging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Jpeto__Global_Tagging_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Tagging Enabled</label>
    <type>Checkbox</type>
</CustomField>