force-app/main/default/objects/User/fields/Jpeto__Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Jpeto__Notification_Email__c</fullName>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>