force-app/main/default/objects/User/fields/Jpeto__Sick_Leave_Hours__c.field-meta.xml
<CustomField>
    <fullName>Jpeto__Sick_Leave_Hours__c</fullName>
    <description>The number of Available Sick Leave Hours</description>
    <label>Sick Leave Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>