force-app/main/default/objects/User/fields/Jpeto__Staffing_Source__c.field-meta.xml
<CustomField>
    <fullName>Jpeto__Staffing_Source__c</fullName>
    <label>Staffing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Augmented</fullName>
            </value>
            <value>
                <fullName>Freelance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>