force-app/main/default/objects/User/fields/Jpeto__Total_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Jpeto__Total_Hours_Worked__c</fullName>
    <label>Total Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>