force-app/main/default/objects/User/fields/Jpeto__Unpaid_Leave__c.field-meta.xml
<CustomField>
    <fullName>Jpeto__Unpaid_Leave__c</fullName>
    <label>Unpaid Leave</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>