force-app/main/default/objects/User/fields/Jpetto__Auto_Generate_Timesheets__c.field-meta.xml
<CustomField>
    <fullName>Jpetto__Auto_Generate_Timesheets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Generate Timesheets</label>
    <type>Checkbox</type>
</CustomField>