force-app/main/default/objects/User/fields/Jpetto__Availability__c.field-meta.xml
<CustomField>
    <fullName>Jpetto__Availability__c</fullName>
    <label>Availability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>