force-app/main/default/objects/User/fields/Jpetto__Connect_Account__c.field-meta.xml
<CustomField>
    <fullName>Jpetto__Connect_Account__c</fullName>
    <label>Connect Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>