force-app/main/default/objects/User/fields/Jpetto__Date_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Jpetto__Date_of_Hire__c</fullName>
    <label>Date of Hire</label>
    <type>Date</type>
</CustomField>