force-app/main/default/objects/User/fields/Jpetto__Floating_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Jpetto__Floating_Holiday__c</fullName>
    <label>Floating Holiday</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>