force-app/main/default/objects/User/fields/Jpetto__Maternity_Paternity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Jpetto__Maternity_Paternity_Hours__c</fullName>
    <description>THe number of available Maternity/Paternity Hours.</description>
    <label>Maternity/Paternity Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>