force-app/main/default/objects/User/fields/Jpetto__Rate_of_Pay__c.field-meta.xml
<CustomField>
    <fullName>Jpetto__Rate_of_Pay__c</fullName>
    <label>Rate of Pay</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>