force-app/main/default/objects/User/fields/Jpetto__Vacation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Jpetto__Vacation_Hours__c</fullName>
    <label>Vacation Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>