force-app/main/default/objects/User/listViews/ActiveUsers.listView-meta.xml
<ListView>
    <fullName>ActiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Jpetto__Auto_Generate_Timesheets__c</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>HIPPA_Certified_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Identity User</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>Integration</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>Security</value>
    </filters>
    <label>Active Users</label>
</ListView>